--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "pino-pretty": "^7.0.1"
   },
   "devDependencies": {
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-node": "^4.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
     "nodemon": "^2.0.13"
   }
 }
