--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "fastify": "^3.21.6",
     "fastify-plugin": "^3.0.0",
+    "fastify-swagger": "^4.12.4",
     "mongoose": "^6.0.7",
     "node-geocoder": "^3.27.0",
     "pino-pretty": "^7.0.1"
