--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
         "import/order": "error",
         "arrow-spacing": "error",
         "multiline-ternary": ["error", "always"],
-        "indent": "off"
+        "indent": "off",
+        "prefer-arrow-callback": "off"
     },
     "parserOptions": {
         "ecmaVersion": 2018,
