--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
   },
   "homepage": "https://github.com/AdyPolyCode/Todo-App-Node-js#readme",
   "dependencies": {
-    "colors": "^1.4.0",
     "dotenv": "^10.0.0",
     "fastify": "^3.21.6",
     "fastify-plugin": "^3.0.0",
     "fastify-swagger": "^4.12.4",
     "mongoose": "^6.0.7",
-    "node-geocoder": "^3.27.0",
-    "pino-pretty": "^7.0.1"
+    "node-geocoder": "^3.27.0"
   },
   "devDependencies": {
+    "colors": "^1.4.0",
+    "pino-pretty": "^7.0.1",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-node": "^4.1.0",
