--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "todo-app-node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server",
-    "dev": "nodemon server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AdyPolyCode/Todo-App-Node-js.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/AdyPolyCode/Todo-App-Node-js/issues"
-  },
-  "homepage": "https://github.com/AdyPolyCode/Todo-App-Node-js#readme",
-  "dependencies": {
-    "dotenv": "^10.0.0",
-    "fastify": "^3.21.6",
-    "fastify-plugin": "^3.0.0",
-    "fastify-swagger": "^4.12.4",
-    "mongoose": "^6.0.7",
-    "node-geocoder": "^3.27.0"
-  },
-  "devDependencies": {
-    "colors": "^1.4.0",
-    "pino-pretty": "^7.0.1",
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-node": "^4.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "nodemon": "^2.0.13"
-  }
+    "name": "todo-app-node",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/server.js",
+    "scripts": {
+        "start": "node server",
+        "dev": "nodemon server"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/AdyPolyCode/Todo-App-Node-js.git"
+    },
+    "author": "",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/AdyPolyCode/Todo-App-Node-js/issues"
+    },
+    "homepage": "https://github.com/AdyPolyCode/Todo-App-Node-js#readme",
+    "dependencies": {
+        "dotenv": "^10.0.0",
+        "fastify": "^3.21.6",
+        "fastify-plugin": "^3.0.0",
+        "fastify-swagger": "^4.12.4",
+        "mongoose": "^6.0.7",
+        "node-geocoder": "^3.27.0"
+    },
+    "devDependencies": {
+        "winston": "^3.3.3",
+        "colors": "^1.4.0",
+        "eslint": "^7.2.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-config-node": "^4.1.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-node": "^11.1.0",
+        "nodemon": "^2.0.13",
+        "pino-pretty": "^7.0.1"
+    }
 }
