--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "type": "git",
         "url": "git+https://github.com/AdyPolyCode/Todo-App-Node-js.git"
     },
-    "author": "",
+    "author": "Ady",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/AdyPolyCode/Todo-App-Node-js/issues"
