--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "dependencies": {
         "dotenv": "^10.0.0",
         "fastify": "^3.21.6",
+        "fastify-cors": "^6.0.2",
         "fastify-plugin": "^3.0.0",
         "fastify-swagger": "^4.12.4",
         "mongoose": "^6.0.7",
         "node-geocoder": "^3.27.0"
     },
     "devDependencies": {
-        "winston": "^3.3.3",
         "colors": "^1.4.0",
         "eslint": "^7.2.0",
         "eslint-config-airbnb-base": "^14.2.1",
@@ -34,6 +34,7 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-node": "^11.1.0",
         "nodemon": "^2.0.13",
-        "pino-pretty": "^7.0.1"
+        "pino-pretty": "^7.0.1",
+        "winston": "^3.3.3"
     }
 }
